--- a/twitter.html
+++ b/twitter.html
@@ -34,7 +34,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/3frèresbannières.jpeg" alt="3 frères" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/3frèresbannières.png" alt="3 frères" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Ace, Luffy & Sabo</p>
                     <div class="appreciate-separator"></div>
@@ -42,7 +42,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Gon&Kiruabannière.JPG" alt="Gon&Kirua" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/Gon&Kiruabannière.png" alt="Gon&Kirua" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Gon & Kirua</p>
                   <div class="appreciate-separator"></div>
@@ -56,7 +56,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière//Itachiincrustébannière.JPG" alt="Itachi" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/Itachiincrustébannière.png" alt="Itachi" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Itachi Uchiwa</p>
                     <div class="appreciate-separator"></div>
@@ -64,7 +64,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Robinbannière.jpeg" alt="Robin" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/Robinbannière.png" alt="Robin" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Nico Robin</p>
                   <div class="appreciate-separator"></div>
@@ -78,7 +78,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Minato&Kyubibannièr.JPG" alt="Minato" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/Minato&Kyubibannièr.png" alt="Minato" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Minato Namikaze</p>
                     <div class="appreciate-separator"></div>
@@ -86,7 +86,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Obitobannière.jpeg" alt="Obito" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/Obitobannière.png" alt="Obito" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Obito Uchiha</p>
                   <div class="appreciate-separator"></div>
@@ -100,7 +100,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Mugiwarabannièrecroix.JPG" alt="Mugiwara" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/Mugiwarabannièrecroix.png" alt="Mugiwara" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Mugiwara - symbole pour Vivi</p>
                     <div class="appreciate-separator"></div>
@@ -122,7 +122,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Newgatebannière.jpeg" alt="Newgate" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/Newgatebannière.png" alt="Newgate" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Barbe blanche</p>
                     <div class="appreciate-separator"></div>
@@ -130,7 +130,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Sasuke&Naruto.JPG" alt="Sasuke&Naruto" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/Sasuke&Naruto.png" alt="Sasuke&Naruto" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Sasuke & Naruto</p>
                   <div class="appreciate-separator"></div>
@@ -152,7 +152,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Sabobannière.jpeg" alt="Sabo" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/Sabobannière.png" alt="Sabo" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Sabo</p>
                   <div class="appreciate-separator"></div>
@@ -166,7 +166,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Ace&Luffy.jpeg" alt="Ace&Luffy" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/Ace&Luffy.png" alt="Ace&Luffy" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Ace & Luffy</p>
                     <div class="appreciate-separator"></div>
@@ -174,7 +174,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Gohanbannière.JPG" alt="Gohan" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/Gohanbannière.png" alt="Gohan" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Son Gohan</p>
                   <div class="appreciate-separator"></div>
@@ -188,7 +188,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Amirauxbannières.jpeg" alt="Luffy" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/Amirauxbannières.png" alt="Luffy" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Monkey D. Luffy</p>
                     <div class="appreciate-separator"></div>
@@ -196,7 +196,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Goku&Vegetabannière.JPG" alt="Goku&Vegeta" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/Goku&Vegetabannière.png" alt="Goku&Vegeta" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Goku & Vegeta</p>
                   <div class="appreciate-separator"></div>
@@ -232,7 +232,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Zorobannière.jpg" alt="Zoro" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/Zoro2bannière.png" alt="Zoro" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Roronoa Zoro</p>
                     <div class="appreciate-separator"></div>
