--- a/NarutoP.html
+++ b/NarutoP.html
@@ -123,7 +123,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img src="./img/Naruto/SasukeDémon.png" alt="SasukeDemon" class="appreciate-elem-img">
+                <img src="./img/Naruto/SasukeDemon.png" alt="SasukeDemon" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Sasuke Uchiwa</p>
                     <p>Marque maudite</p>
