--- a/twitter.html
+++ b/twitter.html
@@ -34,7 +34,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/3frèresbannières.png" alt="3 frères" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/3frèresbannieres.png" alt="3 frères" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Ace, Luffy & Sabo</p>
                     <div class="appreciate-separator"></div>
@@ -42,7 +42,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Gon&Kiruabannière.png" alt="Gon&Kirua" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/Gon&Kiruabanniere.png" alt="Gon&Kirua" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Gon & Kirua</p>
                   <div class="appreciate-separator"></div>
@@ -56,7 +56,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Itachiincrustébannière.png" alt="Itachi" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/Itachiincrustebanniere.png" alt="Itachi" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Itachi Uchiwa</p>
                     <div class="appreciate-separator"></div>
@@ -64,7 +64,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Robinbannière.png" alt="Robin" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/Robinbanniere.png" alt="Robin" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Nico Robin</p>
                   <div class="appreciate-separator"></div>
@@ -78,7 +78,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Minato&Kyubibannièr.png" alt="Minato" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/Minato&Kyubibannier.png" alt="Minato" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Minato Namikaze</p>
                     <div class="appreciate-separator"></div>
@@ -86,7 +86,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Obitobannière.png" alt="Obito" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/Obitobanniere.png" alt="Obito" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Obito Uchiha</p>
                   <div class="appreciate-separator"></div>
@@ -100,7 +100,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Mugiwarabannièrecroix.png" alt="Mugiwara" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/Mugiwarabannierecroix.png" alt="Mugiwara" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Mugiwara - symbole pour Vivi</p>
                     <div class="appreciate-separator"></div>
@@ -108,7 +108,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Zorobannière.png" alt="Zoro" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/Zorobanniere.png" alt="Zoro" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Roronoa Zoro</p>
                   <div class="appreciate-separator"></div>
@@ -122,7 +122,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Newgatebannière.png" alt="Newgate" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/Newgatebanniere.png" alt="Newgate" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Barbe blanche</p>
                     <div class="appreciate-separator"></div>
@@ -144,7 +144,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Shanksbannière.png" alt="Shanks" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/Shanksbanniere.png" alt="Shanks" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Shanks & Luffy</p>
                     <div class="appreciate-separator"></div>
@@ -152,7 +152,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Sabobannière.png" alt="Sabo" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/Sabobanniere.png" alt="Sabo" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Sabo</p>
                   <div class="appreciate-separator"></div>
@@ -174,7 +174,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Gohanbannière.png" alt="Gohan" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/Gohanbanniere.png" alt="Gohan" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Son Gohan</p>
                   <div class="appreciate-separator"></div>
@@ -188,7 +188,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Amirauxbannières.png" alt="Luffy" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/Amirauxbanniere.png" alt="Luffy" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Monkey D. Luffy</p>
                     <div class="appreciate-separator"></div>
@@ -196,7 +196,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Goku&Vegetabannière.png" alt="Goku&Vegeta" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/Goku&Vegetabanniere.png" alt="Goku&Vegeta" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Goku & Vegeta</p>
                   <div class="appreciate-separator"></div>
@@ -232,7 +232,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Zoro2bannière.png" alt="Zoro" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/Zoro2banniere.png" alt="Zoro" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Roronoa Zoro</p>
                     <div class="appreciate-separator"></div>
