--- a/twitter.html
+++ b/twitter.html
@@ -34,7 +34,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/3frèresbannieres.png" alt="3 frères" class="appreciate-elem-img">
+                <img class="banniere" src="./img/Bannière/3freresbannieres.png" alt="3 frères" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Ace, Luffy & Sabo</p>
                     <div class="appreciate-separator"></div>
