--- a/DBP.html
+++ b/DBP.html
@@ -174,7 +174,7 @@
                 </div>
               </li>
             <li class="appreciate-elem">
-                <img src="./img/Dragonball/JirenNéon.png" alt="Jiren" class="appreciate-elem-img">
+                <img src="./img/Dragonball/JirenNeon.png" alt="Jiren" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Jiren</p>
                     <p>Inspiration Néon</p>
