--- a/DBP.html
+++ b/DBP.html
@@ -351,7 +351,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-                <img src="./img/Dragonball/Rosé.JPG" alt="Goku rosé" class="appreciate-elem-img">
+                <img src="./img/Dragonball/Rose.JPG" alt="Goku rosé" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Black Goku Rosé</p>
                     <p>Vengeance</p>
