--- a/Deathnotep.html
+++ b/Deathnotep.html
@@ -48,7 +48,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-                <img src="./img/Deathnote/LightYagamiSappé.jpeg" alt="Yagami" class="appreciate-elem-img">
+                <img src="./img/Deathnote/LightYagamiSappe.jpeg" alt="Yagami" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Light Yagami</p>
                     <p>Streetstyle</p>
