--- a/computer.html
+++ b/computer.html
@@ -34,6 +34,20 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img class="fdepc" src="./img/PC/ZoroOKLMPC.JPG" alt="Zoro" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Roronoa Zoro</p>
+                    <div class="appreciate-separator"></div>
+                    <p> Maitrise ENMA</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img class="fdepc" src="./img/PC/Itachi&Sasuke.JPG" alt="Itachi&Sasuke" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Itachi & Sasuke</p>
