--- a/index.html
+++ b/index.html
@@ -66,6 +66,49 @@
           </ul>
       </div>
     </section>
+    <section id="Appreciate" class="appreciate">
+      <div class="container">
+          <h2 class="title-underline" >Ajouts récents - ONE PIECE/SNK</h2>
+          <ul class="appreciate-list">
+              <li class="appreciate-elem">
+                  <img src="./img/One piece/SzboAceLuffy.JPG" alt="Luffyfreres" class="appreciate-elem-img">
+                  <div class="appreciate-elem-text">
+                      <p>Sabo, Ace & Luffy</p>
+                      <p>Mont Corvo</p>
+                      <div class="appreciate-separator"></div>
+                      <p>Auteur: ?</p>
+                  </div>
+              </li>
+              <li class="appreciate-elem">
+                <img src="./img/One piece/Zorooklm.JPG" alt="Zoro" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Roronoa Zoro</p>
+                    <p>& Enma</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: DLELE</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="tapion" src="./img/SNK/LivaiShelby.JPG" alt="Livai" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Livaï Ackerman</p>
+                  <p>Peaky Blinders</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: @abdel_uchiha</p>
+              </div>
+            </li>
+            <li class="appreciate-elem">
+              <img src="./img/SNK/Mikasatitancolossal.JPG" alt="Mikasa" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Mikasa Ackerman</p>
+                  <p>& titan colossal</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: @imKIYU</p>
+              </div>
+            </li>
+          </ul>
+      </div>
+    </section>
     <div class="content">
       <div class="articles-container">
         <h2 class="title-underline2" >LE FOCUS</h2>
