commit twitter ajout

--- a/twitter.html
+++ b/twitter.html
@@ -272,6 +272,50 @@
         </ul>
     </div>
   </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img class="banniere" src="./img/Bannière/Zoro3banniere.JPG" alt="Zoro" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Roronoa Zoro</p>
+                    <div class="appreciate-separator"></div>
+                    <p>FLOW</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="banniere" src="./img/Bannière/Usoppbannier.JPG" alt="Usopp" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Usopp</p>
+                  <div class="appreciate-separator"></div>
+                  <p>SNIPER</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img class="banniere" src="./img/Bannière/Alluka&Killua.JPG" alt="Alluka&KIrua" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Alluka&Kirua</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Zoldyck</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="banniere" src="./img/Bannière/marcobanniere.JPG" alt="Marco" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Marco</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Le phénix</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
   <footer>
     <aside>
       <div class="block">
