--- a/NarutoP.html
+++ b/NarutoP.html
@@ -24,6 +24,7 @@
       <li><a href="index.html">Accueil</a></li>
       <li><a class="active" href="phone.html">Phones</a></li>
       <li><a href="other.html">Other</a></li>
+      <li><a href="focus.html">Focus</a></li>
     </ul>
   </header>
   <nav>
@@ -326,6 +327,49 @@
                   <p>Auteur: @NamiKateh</p>
               </div>
           </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <h2 class="title-underline" >À la une ce mois-ci, @trash_scar !</h2>
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img src="./img/Naruto/ItachiSape.png" alt="Itachi" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Itachi Uchiwa</p>
+                    <p>Costume</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Narutovie</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img src="./img/Naruto/kabuto.jpeg" alt="Kabuto" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Kabuto Yakushi</p>
+                  <p>Ryuchido</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: i.scxr</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img src="./img/Naruto/KisameHoshigaki.jpeg" alt="Kisame" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Kisame Hoshigaki</p>
+                <p>1000 requins aqueux</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: i.scxr</p>
+            </div>
+          </li>
+          <li class="appreciate-elem">
+            <img src="./img/Naruto/Konan.jpeg" alt="Konan" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Konan</p>
+                <p>Shikigami no Mai</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: i.scxr</p>
+            </div>
+        </li>
         </ul>
     </div>
   </section>
