--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a class="active" href="index.html">Accueil</a></li>
         <li><a href="phone.html">Phones</a></li>
         <li><a href="other.html">Other</a></li>
+        <li><a href="focus.html">Focus</a></li>
       </ul>
     </header>
     <section class="vp">
@@ -34,33 +35,42 @@
     </section>
     <section id="Appreciate" class="appreciate">
       <div class="container">
-          <h2 class="title-underline" >À la une ce mois-ci, les "RAPWALL" !</h2>
+          <h2 class="title-underline" >À la une ce mois-ci, @trash_scar !</h2>
           <ul class="appreciate-list">
               <li class="appreciate-elem">
-                  <img src="./img/One piece/LuffyQLF.png" alt="Luffy" class="appreciate-elem-img">
+                  <img src="./img/Tokyoghoul/kenkaneki3.jpeg" alt="Kaneki" class="appreciate-elem-img">
                   <div class="appreciate-elem-text">
-                      <p>Monkey D. Luffy</p>
-                      <p>QLF</p>
+                      <p>Ken Kaneki</p>
+                      <p>Désespoir</p>
                       <div class="appreciate-separator"></div>
-                      <p>Auteur: NarutoVie</p>
+                      <p>Auteur: i.scxr</p>
                   </div>
               </li>
               <li class="appreciate-elem">
-                <img src="./img/Naruto/MadaraJUL.JPG" alt="Madara" class="appreciate-elem-img">
+                <img src="./img/Naruto/kabuto.jpeg" alt="Kabuto" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
-                    <p>Madara Uchiwa</p>
-                    <p>JUL</p>
+                    <p>Kabuto Yakushi</p>
+                    <p>Ryuchido</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: NarutoVie</p>
+                    <p>Auteur: i.scxr</p>
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img src="./img/One piece/LuffyQLFsigne.jpeg" alt="Luffy" class="appreciate-elem-img">
+              <img src="./img/Naruto/KisameHoshigaki.jpeg" alt="Kisame" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Monkey D. Luffy</p>
-                  <p>PNL</p>
+                  <p>Kisame Hoshigaki</p>
+                  <p>1000 requins aqueux</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: NarutoVie</p>
+                  <p>Auteur: i.scxr</p>
+              </div>
+            </li>
+            <li class="appreciate-elem">
+              <img src="./img/Naruto/Konan.jpeg" alt="Konan" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Konan</p>
+                  <p>Shikigami no Mai</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: i.scxr</p>
               </div>
           </li>
           </ul>
@@ -113,19 +123,16 @@
       <div class="articles-container">
         <h2 class="title-underline2" >LE FOCUS</h2>
         <div class="article">
-          <img src="./img/Cover/Coverxanimes.jpeg" alt="Coverxanimes">
-          <h2>@Coverxanimes</h2>
+          <img src="./img/Focus/Drawinoff/PainDrawinoff.JPG" alt="Draw'¡noff">
+          <h2>Draw'¡n</h2>
           <div class="article-author">
             <p>M. Lemercier</p>
           </div>
           <div class="article-content">
-            <p>Je promeus aujourd'hui <span class="gras">@coverxanimes</span>, de son vrai nom Antoine pour son travail & sa créativité. 
-              Son concept est super original, il refait des covers d'albums du rap français en remplaçant l'artiste par un personnage d'animé. Le rendu est toujours très soigné, très propre. 
-              Et pour les connaisseurs d'animés/mangas & de rap, les personnages choisis sont toujours les plus cohérents avec le style du/des rappeur(s). Vous pourrez trouver sous ses posts twitter, les versions fond d'écran de ses covers x animés qui ne sont pas disponible sur "WALL.".
-              Vous pourrez également découvrir ci-dessous quelques unes de ses créations et je vous laisse son @ twitter/insta en dessous! 
-              J'espère que ce focus vous aura plus, n'hésitez pas à me le faire savoir. Et n'hésitez pas non plus à aller donner de la force à ce genre d'artiste encore inconnu vraiment talentueux. 
-              PS: Il vient d'ouvrir un shop dans lequel on peut commander ses covers sous forme de poster. N'hésitez pas! 
-              Au plaisir :) </p>
+            <p>Je promeus ce mois-ci <span class="gras">@Drawinoff</span>, pour son travail et son style personnel. Il dessine des personnages d'animés avec un style atypique. Le personnage apparaît déchiré, presque brulé des fois, et le moins que l'on puisse dire c'est qu'il a remporté un franc succès sur twitter! Les dessins sont très réussis, on ressent la patte de l'artiste.
+            Avec le soutien de ses fans, il a ouvert sa propre e-boutique, trouvable actuellement sur ses réseaux (disponibles ci-dessous). Dans cette dernière, on y retrouve ses dessins qu'il vend pour une modique somme.
+          Je vous conseille d'aller faire un tour sur son profil pour lui donner de la force même si je suis sur que vous irez directement vous abonner lorsque vous verrez ses dessins ci-dessous. Je vous laisse son @ twitter/insta juste en dessous!
+        Au plaisir pour un nouveau focus :)</p>
           </div>
         </div>
       </div>
@@ -134,54 +141,46 @@
       <div class="container">
           <ul class="appreciate-list">
               <li class="appreciate-elem">
-                  <img src="./img/Cover/HxHcover.JPG" alt="HxH" class="appreciate-elem-img">
+                  <img src="./img/Focus/Drawinoff/HisokaDrawinoff.JPG" alt="Hisoka" class="appreciate-elem-img">
                   <div class="appreciate-elem-text">
-                      <p>Gon & Kirua</p>
-                      <p>Ademo & N.O.S</p>
-                      <p>Cover - Deux frères </p>
+                      <p>Hisoka Morow</p>
                       <div class="appreciate-separator"></div>
-                      <p>Auteur: @coverxanimes</p>
+                      <p>Auteur: @drawinoff</p>
                   </div>
               </li>
               <li class="appreciate-elem">
-                <img src="./img/Cover/DoflamingoNinho.JPG" alt="Doflamingo" class="appreciate-elem-img">
+                <img src="./img/Focus/Drawinoff/Kakashidrawinoff.JPG" alt="Kakashi" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
-                    <p>Doflamingo</p>
-                    <p>Ninho</p>
-                    <p>Cover - Comme Prévu</p>
+                    <p>Kakashi Hatake</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: @coverxanimes</p>
+                    <p>Auteur: @drawinoff</p>
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img src="./img/Cover/Luffycover.JPG" alt="Luffy" class="appreciate-elem-img">
+              <img src="./img/Focus/Drawinoff/ZoroDrawinoff.JPG" alt="Zoro" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Monkey D. Luffy</p>
-                  <p>Booba</p>
-                  <p>Cover - Trône</p>
+                  <p>Roronoa Zoro</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: @coverxanimes</p>
+                  <p>Auteur: @drawinoff</p>
               </div>
           </li>
           <li class="appreciate-elem">
-            <img src="./img/Cover/Paincover.JPG" alt="Pain" class="appreciate-elem-img">
+            <img src="./img/Focus/Drawinoff/TobiDrawinoff.JPG" alt="Tobi" class="appreciate-elem-img">
             <div class="appreciate-elem-text">
-                <p>Pain</p>
-                <p>S.Pri Noir</p>
-                <p>Cover - Masque Blanc</p>
+                <p>Tobi</p>
                 <div class="appreciate-separator"></div>
-                <p>Auteur: @coverxanimes</p>
+                <p>Auteur: @drawinoff</p>
             </div>
         </li>
           </ul>
       </div>
     </section>
     <div class="cover">
-      <a class="espacedroite" href="https://twitter.com/coverxanimes">
-        <i class="fab fa-twitter"></i>coverxanimes
+      <a class="espacedroite" href="https://twitter.com/drawinoff">
+        <i class="fab fa-twitter"></i>Draw'¡n
       </a>
-      <a class="espacegauche" href="https://www.instagram.com/coverxanimes/">
-        <i class="fab fa-instagram"></i>coverxanimes
+      <a class="espacegauche" href="https://www.instagram.com/drawinoff/">
+        <i class="fab fa-instagram"></i>Draw'¡n
       </a>
     </div>
     <footer>
