--- a/computer.html
+++ b/computer.html
@@ -24,6 +24,7 @@
       <li><a href="index.html">Accueil</a></li>
       <li><a href="phone.html">Phones</a></li>
       <li><a class="active" href="other.html">Other</a></li>
+      <li><a href="focus.html">Focus</a></li>
     </ul>
   </header>
   <nav>
