--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
           <h2 class="title-underline" >Ajouts récents - ONE PIECE/SNK</h2>
           <ul class="appreciate-list">
               <li class="appreciate-elem">
-                  <img src="./img/One piece/SzboAceLuffy.JPG" alt="Luffyfreres" class="appreciate-elem-img">
+                  <img src="./img/One piece/Smoker.jpeg" alt="Smoker" class="appreciate-elem-img">
                   <div class="appreciate-elem-text">
-                      <p>Sabo, Ace & Luffy</p>
-                      <p>Mont Corvo</p>
+                      <p>Smoker</p>
+                      <p>& ses 2 cigares</p>
                       <div class="appreciate-separator"></div>
-                      <p>Auteur: ?</p>
+                      <p>Auteur: @Occhada</p>
                   </div>
               </li>
               <li class="appreciate-elem">
