--- a/HxHP.html
+++ b/HxHP.html
@@ -129,7 +129,7 @@
                     <p>Kirua Zoldyck</p>
                     <p>Inspiration Manga</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: ?</p>
+                    <p>Auteur: Dimé</p>
                 </div>
             </li>
             <li class="appreciate-elem">
