--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
           <p>DOFLAMINGO>ALL</p>
       </div>
     </section>
+    <section class="spoiler">
+      <div class="spoiler-content">
+        <h1>ATTENTION SPOIL</h1>
+        <p>Ce site vous propose des fonds d'écrans qui sont parfois des scènes emblématiques de l'animé.
+          <br>
+          Nous vous déconseillons de cliquer sur un animé que vous n'avez pas fini. 
+          <br>
+          Vous êtes prévenus. ;)
+        </p>
+      </div>
+    </section>
     <section id="Appreciate" class="appreciate">
       <div class="container">
           <h2 class="title-underline" >À la une ce mois-ci, @trash_scar !</h2>
