--- a/focus.html
+++ b/focus.html
@@ -42,6 +42,9 @@
         Je vous conseille d'aller faire un tour sur son profil pour lui donner de la force même si je suis sur que vous irez directement vous abonner lorsque vous verrez ses dessins ci-dessous. Je vous laisse son @ twitter/insta juste en dessous!
       Au plaisir pour un nouveau focus :)</p>
         </div>
+        <div class="article-date">
+          <p>Juin 2020</p>
+        </div>
       </div>
     </div>
   </div>
@@ -107,6 +110,9 @@
             J'espère que ce focus vous aura plus, n'hésitez pas à me le faire savoir. Et n'hésitez pas non plus à aller donner de la force à ce genre d'artiste encore inconnu vraiment talentueux. 
             PS: Il vient d'ouvrir un shop dans lequel on peut commander ses covers sous forme de poster. N'hésitez pas! 
             Au plaisir pour un nouveau focus :) </p>
+        </div>
+        <div class="article-date">
+          <p>Mai 2020</p>
         </div>
       </div>
     </div>
