--- a/index.html
+++ b/index.html
@@ -75,13 +75,12 @@
                   <p>Auteur: i.scxr</p>
               </div>
             </li>
-            <li class="appreciate-elem">
-              <img src="./img/Naruto/Konan.jpeg" alt="Konan" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Konan</p>
-                  <p>Shikigami no Mai</p>
-                  <div class="appreciate-separator"></div>
-                  <p>Auteur: i.scxr</p>
+            <li class="appreciate-elem2">
+              <div class="appreciate-affiche">
+                <img src="img/Présentation affiche/zoro_iscxr.jpeg" alt="zoro">
+              </div>
+              <div class="appreciate-elem2-text">
+                  <p>@trash_scar est un des meilleurs en collage. Il sait utiliser de beaux arrières-plans et bien coller le/les personnages dessus. Les fonds d'écrans ne sont incroyables mais le résultat est propre, soigné. Il publie vraiment souvent, suivez-le.</p>
               </div>
           </li>
           </ul>
