--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </li>
             <li class="appreciate-elem2">
               <div class="appreciate-affiche">
-                <img src="img/Présentation affiche/zoro_iscxr.jpeg" alt="zoro">
+                <img src="img/Présentation affiche/zoroiscxr.jpeg" alt="zoro">
               </div>
               <div class="appreciate-elem2-text">
                   <p>@trash_scar est un des meilleurs en collage. Il sait utiliser de beaux arrières-plans et bien coller le/les personnages dessus. Les fonds d'écrans ne sont incroyables mais le résultat est propre, soigné. Il publie vraiment souvent, suivez-le.</p>
