--- a/OnepieceP.html
+++ b/OnepieceP.html
@@ -334,6 +334,48 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img class="whitz" src="./img/One piece/robindress.JPG" alt="Robin" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Nico Robin</p>
+                    <p>Well dressed</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Acelem</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img//One piece/shanks&baggy.JPG" alt="Shanks&baggy" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Shanks & Baggy</p>
+                    <p>Mort de Gold Roger</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/One piece/Smoker.jpeg" alt="Smoker" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Smoker</p>
+                    <p>& ses 2 cigares</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: @Occhada</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img src="./img/One piece/odenkozuki.JPG" alt="Oden" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Oden Kozuki</p>
+                  <p>PATRON</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: @_Sannim</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img src="./img/One piece/Zoro3.jpeg" alt="zoro" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Roronoa Zoro</p>
