--- a/index.html
+++ b/index.html
@@ -86,6 +86,31 @@
           </ul>
       </div>
     </section>
+    <div class="pack">
+      <div class="pack-container">
+        <h2 class="banner">STARTER PACK</h2>
+        <p>Otama & Ace</p>
+          <div class="starter">
+            <ul class="starter-list1">
+              <li class="starter-elem">
+                <img src="./img/affiche/OtamaAce1.JPG" alt="Otama & Ace">
+              </li>
+              <li class="starter-elem">
+                <img src="./img/affiche/OtamaAce2.JPG" alt="Otama & Ace">
+              </li>
+            </ul>
+            <ul class="starter-list2">
+              <li class="starter-elem">
+                <img src="./img/affiche/OtamaAce3.JPG" alt="Otama & Ace">
+              </li>
+              <li class="starter-elem">
+                <img src="./img/affiche/OtamaAce4.JPG" alt="Otama & Ace">
+              </li>
+            </ul>
+          </div>
+          <p>Disponible en bannière dans "Other"</p>
+        </div>
+      </div>
     <section id="Appreciate" class="appreciate">
       <div class="container">
           <h2 class="title-underline" >Ajouts récents - ONE PIECE/SNK</h2>
